# libspatialite

./: CMakeLists.txt
cmake/: FindLibRTTopo.cmake  FindMinizip.cmake  FindProj.cmake
src/gaiageo/: gg_shape.c
src/headers/spatialite/: gaiaconfig-msvc.h  gaiaconfig-msvc.h.in  gaiaconfig.h
